--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test",
   "version": "0.1.0",
-  "homepage": "https://kuzz0k.github.io/test",
+  "homepage": "https://kuzz0k.github.io/NFcolors",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
